Cleaned up setVar and setValue. Added example of string to int